src/test/ui/impl-trait/bindings.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/bindings.rs:4:29
   |
LL |     const foo: impl Clone = x;
   |                             ^ non-constant value

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/bindings.rs:10:33
   |
LL |         const foo: impl Clone = x;
   |                                 ^ non-constant value

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/bindings.rs:17:33
   |
LL |         const foo: impl Clone = x;
   |                                 ^ non-constant value

error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/bindings.rs:24:33
   |
LL |         const foo: impl Clone = x;
   |                                 ^ non-constant value

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0435`.
